# fp2021

./: artifacts-deployment-key  tasks.md
.github/workflows/: CommentPR.yml  PR.yml  PrPost.yml
HaskellADT/: .ocamlformat  HaskellADT.opam  README.md  REPL.ml  dune  dune-project
HaskellADT/demos/: demoHaskellADT.ml  demoHaskellADT.t  dune
HaskellADT/lib/: Printast.ml  ast.ml  dune  interpreter.ml  parser.ml  stdlib.ml
Lambda/: README.md
Lambda/lib/: Printast.ml  ast.mli  interpret.ml  lambda.ml  parser.ml  utils.ml
ParallelModel/: Parallelmodel.opam  REPL.ml  a.out  dune  dune-project
ParallelModel/QCtest/: QCTests.ml  dune
ParallelModel/demos/: compoundStmts.ml  compoundStmts.t  compoundStmtsTSO.ml  compoundStmtsTSO.t  demoAO.ml  demoNO.ml  demoParse.ml  demoSC.ml  demoSC1.ml  demoSC2.ml  demoSC3.ml  demoTSO.ml  dune  independentReadsOfIndependentWrites.t  independentReadsOfIndependentWritesSC.ml  independentReadsOfIndependentWritesTSO.ml  loadBuffering.t  loadBufferingSC.ml  loadBufferingTSO.ml  msgPassing.t  msgPassingSC.ml  msgPassingTSO.ml  readReadCoherence.t  readReadCoherenceSC.ml  readReadCoherenceTSO.ml  storeBuffering.t  storeBufferingNoBarsSC.ml  storeBufferingNoBarsTSO.ml  storeBufferingSC.ml  storeBufferingTSO.ml  storeBufferingWithBarsSC.ml  storeBufferingWithBarsTSO.ml  tests.t  writeToReadCausality.t  writeToReadCausalitySC.ml  writeToReadCausalityTSO.ml
ParallelModel/lib/: a.out  ast.cmi  ast.cmo  ast.ml  dune  interpret.ml  parallelmodel.ml  parser.cmi  parser.cmo  parser.ml  prog  tests.ml  tso.ml
Python/: README.md  REPL.ml
Python/demos/: dune  test.t
Python/lib/: ast.ml  dune  interpreter.ml  parser.ml
Ruby/: Makefile  README.md  Ruby.opam  dune-project
Ruby/demos/: anonymous.ml  closure.ml  demo.ml  demo.t  dune  method_missing.ml  multiple_assignment.ml  object.ml  recursion.ml  test1.rb
Ruby/lib/: ast.ml  interpreter.ml  parser.ml  tests.ml
Test/: dune  dune-project
Test/lib/: dune
doc/CsharpExcep/CsharpExcep/Csharp_lib/Ast/: index.html
doc/CsharpExcep/CsharpExcep/Csharp_lib/Interpreter/Interpreter/: index.html
doc/CsharpExcep/CsharpExcep/Csharp_lib/Test_interpreter/: index.html
doc/CsharpExcep/CsharpExcep/Csharp_lib/Value_types/: index.html
doc/CsharpExcep/CsharpExcep/Csharp_lib/Value_types/KeyMap/: index.html
doc/Cypher/Cypher/Cypher_lib/Ast/: index.html
doc/HaskellADT/HaskellADT/HaskellADT_lib/Ast/BindsMap/: index.html
doc/HaskellADT/HaskellADT/HaskellADT_lib/Interpreter/Interpret/: index.html
doc/HaskellADT/HaskellADT/HaskellADT_lib/Interpreter/InterpretResult/: index.html
doc/HaskellADT/HaskellADT/HaskellADT_lib/Parser/: index.html
doc/HaskellADT/HaskellADT/HaskellADT_lib/Printast/: index.html
doc/HaskellADT/HaskellADT/HaskellADT_lib/Stdlib/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Ast/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Interpret/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Interpret/TRACE/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Interpret/TSO/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Interpret/module-type-MONAD/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Interpret/module-type-MONADERROR/: index.html
doc/ParallelModel/ParallelModel/Parallelmodel_lib/Parser/: index.html
doc/Python/Python/: index.html
doc/Ruby/Ruby/Ruby_lib/Ast/: index.html
doc/Ruby/Ruby/Ruby_lib/Interpreter/: index.html
doc/Ruby/Ruby/Ruby_lib/Interpreter/Eval/: index.html
doc/Ruby/Ruby/Ruby_lib/Interpreter/module-type-MONAD/: index.html
doc/Scheme_call/: index.html
doc/Scheme_call/Scheme_call/: index.html
doc/Scheme_call/Scheme_call/Scheme_call_lib/: index.html
doc/Scheme_call/Scheme_call/Scheme_call_lib/Ast/: index.html
doc/Scheme_call/Scheme_call/Scheme_call_lib/Interpreter/: index.html
doc/Scheme_call/Scheme_call/Scheme_call_lib/Interpreter/Interpret/: index.html
doc/Scheme_call/Scheme_call/Scheme_call_lib/Parser/: index.html
doc/Scheme_call/Scheme_call/Scheme_call_lib/Test/: index.html
doc/Scheme_delim/Scheme_delim/: index.html
doc/Scheme_delim/Scheme_delim/Scheme_delim_lib/Ast/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib/Interpret_classes/Interpret_classes/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib/Interpreter/Interpreter/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib/Test_interpreter/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib/Value_types/: index.html
docs/Cypher/Cypher/: index.html
docs/Cypher/Cypher/Cypher_lib/Ast/: index.html
docs/Cypher/Cypher/Cypher_lib/Interpreter/: index.html
docs/Cypher/Cypher/Cypher_lib/Parser/: index.html
docs/Cypher/Cypher/DemoCypherInterpret/: index.html
docs/HaskellADT/: index.html
docs/HaskellADT/HaskellADT/: index.html
docs/HaskellADT/HaskellADT/HaskellADT_lib/: index.html
docs/HaskellADT/HaskellADT/HaskellADT_lib/Ast/: index.html
docs/HaskellADT/HaskellADT/HaskellADT_lib/Interpreter/: index.html
docs/ParallelModel/: index.html
docs/ParallelModel/ParallelModel/: index.html
docs/ParallelModel/ParallelModel/Parallelmodel_lib/: index.html
docs/ParallelModel/ParallelModel/Parallelmodel_lib/Interpret/: index.html
docs/Python/Python/Python_lib/: index.html
docs/Python/Python/Python_lib/Ast/: index.html
docs/Python/Python/Python_lib/Interpreter/: index.html
docs/Python/Python/Python_lib/Interpreter/Eval/: index.html
docs/Python/Python/Python_lib/Parser/: index.html
docs/Ruby/Ruby/Ruby_lib/Ast/: index.html
docs/Ruby/Ruby/Ruby_lib/Parser/: index.html
docs/Scheme_call/Scheme_call/Scheme_call_lib/Ast/: index.html
docs/Scheme_call/Scheme_call/Scheme_call_lib/Interpreter/: index.html
docs/Scheme_call/Scheme_call/Scheme_call_lib/Parser/: index.html
docs/Scheme_delim/: index.html
docs/Scheme_delim/Scheme_delim/Scheme_delim_lib/: index.html
docs/Scheme_delim/Scheme_delim/Scheme_delim_lib/Interpreter/: index.html
docs/Scheme_delim/Scheme_delim/Scheme_delim_lib/Parser/: index.html
(+34 files in other folders)
