(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Ivan Azarnikov")

(maintainers "Ivan Azarnikov")

(bug_reports "st076357@student.spbu.ru")

(homepage "https://github.com/esvault/fp2021")

(package
 (name HaskellADT) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for language Haskell + ADT")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  containers
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
