(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Nikita Fast")

(maintainers "Nikita Fast")

(bug_reports "breakdownofsanity1404@gmail.com")

(homepage "breakdownofsanity1404@gmail.com")

(package
 (name Parallelmodel) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for language of modeling program execution in different memory models")
 (description
  "Supported program execution in Sequntial Consistency model. Perform all posible executions of program
  which length is lesser than specified with max_depth variable in exec_next_instr function. Also 
  provides info about each execution. If execution is successful then you will see final state of a RAM and 
  registers for every thread and program trace. If execution is not successful you will see textual description
  of error.")
 (version 0.1)
 (depends
  dune
  opal
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
