; (executable
;  (name demoAO)
;  (modules demoAO)
;  (public_name demoAO)
;  (libraries parallelmodel_lib))

; (executable
;  (name demoNO)
;  (modules demoNO)
;  (public_name demoNO)
;  (libraries parallelmodel_lib))

(executable
 (name demoSC)
 (modules demoSC)
 (public_name demoSC)
 (libraries parallelmodel_lib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries parallelmodel_lib))

(cram
 (deps ./demoSC.exe  ./demoParse.exe))
