; (executable
;  (name demoAO)
;  (modules demoAO)
;  (public_name demoAO)
;  (libraries parallelmodel_lib))

; (executable
;  (name demoNO)
;  (modules demoNO)
;  (public_name demoNO)
;  (libraries parallelmodel_lib))

(executable
 (name demoSC1)
 (modules demoSC1)
 (public_name demoSC1)
 (libraries parallelmodel_lib))

 (executable
 (name demoSC2)
 (modules demoSC2)
 (public_name demoSC2)
 (libraries parallelmodel_lib))

 (executable
 (name demoSC3)
 (modules demoSC3)
 (public_name demoSC3)
 (libraries parallelmodel_lib))

 (executable
 (name demoTSO)
 (modules demoTSO)
 (public_name demoTSO)
 (libraries parallelmodel_lib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries parallelmodel_lib))

(cram
 (deps ./demoSC1.exe ./demoSC2.exe ./demoSC3.exe ./demoTSO.exe ./demoParse.exe))
